<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_payment_padding">

    <RadioGroup
        android:id="@+id/radioPaymentOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/credit_card"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbDebitCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit_card"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbNetBanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_banking"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cancel" />
    </LinearLayout>
</LinearLayout>