<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <com.digitalrupay.customviews.CustomTextView
            style="@style/CenturyGothic_bold_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/todays_collection1"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <com.digitalrupay.customviews.CustomTextView
                style="@style/CenturyGothic_bold_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight=".5"
                android:text="@string/assigned_groups"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <com.digitalrupay.customviews.CustomTextView
                style="@style/CenturyGothic_bold_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight=".5"
                android:gravity="right"
                android:text="@string/collections"
                android:textColor="@color/green"
                android:textSize="20sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_employees"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
    </LinearLayout>

    <com.digitalrupay.customviews.CustomTextView
        android:id="@+id/tvTotal"
        style="@style/CenturyGothic_bold_font"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="Total"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <include layout="@layout/sign_out" />

</FrameLayout>