<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <com.digitalrupay.customviews.CustomTextView
            style="@style/CenturyGothic_regular_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/update_mobile_STB"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <LinearLayout
            android:id="@+id/ll_customer_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <com.digitalrupay.customviews.CustomTextView
                    style="@style/CenturyGothic_bold_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/cut_edt_change_mobile_number"
                    style="@style/CenturyGothic_bold_font"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/search_edit_text_shape"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:visibility="gone">

                <com.digitalrupay.customviews.CustomTextView
                    style="@style/CenturyGothic_bold_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/STB_Number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_STB_Number"
                    style="@style/CenturyGothic_bold_font"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/search_edit_text_shape"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/fl_STB_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_frame"
            android:onClick="updateMobile"
            android:padding="10dp">

            <com.digitalrupay.customviews.CustomTextView
                android:id="@+id/Update"
                style="@style/CenturyGothic_regular_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Update"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </FrameLayout>
    </LinearLayout>

    <com.digitalrupay.customviews.CustomTextView
        android:id="@+id/errMsg"
        style="@style/CenturyGothic_regular_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="No Customer Found"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <include layout="@layout/sign_out" />
</FrameLayout>